# Fast-Quadric-Mesh-Simplification

./: .gitignore  CMakeLists.txt  vcpkg.json
src/core/: Main.cpp  Simplify.h
src/gui/: Bmp.cpp  Bmp.h  Core.cpp  Core.h  Main.cpp  OBJ.h  Simplify.h  VecMath.cpp  VecMath.h  glsl.h
src/include/IL/: devil_cpp_wrapper.hpp
